auto-test/tests/chapter_16/invalid_types/extra_credit/bitwise_operation_on_string.c

int main(void) {
    "My string" & 100;
    return 0;
}